@@ -1,3 +1,13 @@
+2006-09-19  Michael Smith  <msmith@fluendo.com>
+
+	* flumotion/component/consumers/httpstreamer/http.py:
+	* flumotion/component/consumers/httpstreamer/http.xml:
+	  burst-time property for http-streamer.
+	  Allows time-based bursting, if multifdsink fully supports it
+	  (currently requires patches).
+	  Some refactoring for clarity. No behaviour changes by default.
+	  Fixes #462
+
 2006-09-18  Michael Smith  <msmith@fluendo.com>
 
 	* flumotion/component/misc/httpfile/httpfile.py:
